# django-serious-shop

./: .coverage  .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
serious_shop/addresses/: admin.py  apps.py  forms.py  managers.py  models.py
serious_shop/cart/: apps.py  cart.py  urls.py  views.py
serious_shop/conf/: asgi.py  celery.py  urls.py  wsgi.py
serious_shop/conf/settings/: base.py  local.py  production.py  test.py
serious_shop/conf/static/: manage.py
serious_shop/coupons/: apps.py  forms.py  managers.py  models.py  urls.py  views.py
serious_shop/items/: admin.py  apps.py  filters.py  forms.py  managers.py  models.py  translation.py  urls.py  views.py
serious_shop/lib/: __init__.py  admin.py  apps.py  context_processors.py  models.py  translation.py  utils.py
serious_shop/lib/templatetags/: common_tags.py  (+1 more)
serious_shop/orders/: admin.py  decorators.py  managers.py  models.py  urls.py  views.py
serious_shop/payments/: apps.py  decorators.py  tasks.py  urls.py  views.py
serious_shop/shop/: admin.py  forms.py  views.py
serious_shop/templates/: base.html  cart_summary.html  checkout.html  confirmed_order.html  detail_item.html  footer.html  generic_info.html  home.html  item_snippet.html  navbar.html  order_confirmed.html  order_payment.html  order_summary.html  pdf.html  profile.html  slider.html  unconfrimed_order.html  user_history.html  user_profile.html
serious_shop/users/: urls.py  views.py
tests/: conftest.py  factories.py  test_admin.py  test_models.py  test_views.py
(+68 files in other folders)
